added git.mk for an automatic .gitignore generation
this file belongs to the git.mk project:
https://github.com/behdad/git.mk

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,8 +5,14 @@ test_header_bar_SOURCES = test-header-bar.vala \
 test_header_bar_LDFLAGS = $(LIBGD_VALA_SAMPLES_LIBS)
 test_header_bar_CFLAGS  =  $(LIBGD_VALA_SAMPLES_CFLAGS)
 
-VALAFLAGS = --target-glib=2.36
+AM_VALAFLAGS = \
+	--target-glib=2.36 \
+	--vapidir=libgd
+	--pkg gd-1.0 \
+	--pkg gtk-3.0
 
 CLEANFILES = \
 	$(patsubst %.vala,%.c,$(filter %.vala, $(SOURCES))) \
 	*_vala.stamp
+
+-include $(top_srcdir)/git.mk
