--- a/Makefile.am
+++ b/Makefile.am
@@ -3,5 +3,17 @@ ACLOCAL_AMFLAGS = -I m4 -I libgd
 SUBDIRS = libgd src 
 
 
+MAINTAINERCLEANFILES = \
+	ABOUT-NLS \
+	aclocal.m4 \
+	config.guess \
+	config.sub \
+	config.h.in \
+	depcomp \
+	install-sh \
+	ltmain.sh \
+	missing \
+	$(VALA_SOURCES:.vala=.c) \
+	*.stamp
 
 -include $(top_srcdir)/git.mk
