fix the location of the libgd vapi dir. fix gtk+-3 dep.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,9 +15,9 @@ AM_CFLAGS  =  $(LIBGD_VALA_SAMPLES_CFLAGS)
 
 AM_VALAFLAGS = \
 	--target-glib=2.36 \
-	--vapidir=libgd
+	--vapidir=$(top_srcdir)/libgd \
 	--pkg gd-1.0 \
-	--pkg gtk-3.0
+	--pkg gtk+-3.0
 
 CLEANFILES = \
 	$(patsubst %.vala,%.c,$(filter %.vala, $(SOURCES))) \
